# TheBestGame

./: Cargo.toml
src/: activation.rs  ai.rs  building.rs  camera.rs  character.rs  chunks.rs  controller.rs  cooldown.rs  core.rs  effects.rs  entity_insights.rs  equipment.rs  game_entities.rs  interaction.rs  item.rs  main.rs  misc_systems.rs  needs.rs  physics.rs  prelude.rs  projectile.rs  riding.rs  sprite.rs  storage.rs  timed.rs  ui.rs  vehicle.rs  world_gen.rs
src/ai/: ai_driver.rs  ai_task.rs  movement_grid.rs  vision_field.rs  vision_insights.rs
src/building/: building_tags.rs
src/character/: character_bundle.rs  character_insights.rs  character_tags.rs  create_character.rs
src/controller/: equipment_interaction.rs  proximity_interaction.rs  user_input_driver.rs
src/core/: basic_systems.rs  component.rs  component_tuple.rs  entity.rs  event.rs  generic_bag.rs  primitive_components.rs  state.rs  system.rs  template.rs
src/interaction/: hand_interaction.rs  interaction_acceptor.rs  interaction_delegate.rs  proximity_interaction.rs
src/item/: create_item.rs  equipment.rs  item_description.rs  item_insights.rs  item_stack.rs  item_tags.rs  storage.rs
src/physics/: collider_insights.rs  projectile.rs  projectile_insights.rs  vision_field.rs  vision_insights.rs
src/prelude/: basic_components.rs  basic_systems.rs  component.rs  component_tuple.rs  entity.rs  entity_bundle.rs  entity_insights.rs  event.rs  generic_bag.rs  interaction.rs  primitive_components.rs  state.rs  state_insights.rs  system.rs  tags.rs  timed.rs
src/sprite/: character_states.rs  (+12 more)
(+35 files in other folders)
